# whatsapp-order-api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_social_connections.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/pages/: privacy_policy.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  connections.py  conversations.py  customers.py  orders.py  shops.py  webhook.py
app/core/: config.py  database.py  encryption.py  exceptions.py  logging.py  security.py
app/middleware/: cors.py  error_handler.py  rate_limit.py  request_id.py
app/models/: __init__.py  base.py  customer.py  message.py  order.py  shop.py  social_connection.py
app/repositories/: __init__.py  base.py  customer_repo.py  message_repo.py  order_repo.py  shop_repo.py  social_connection_repo.py
app/schemas/: __init__.py  auth.py  common.py  connection.py  customer.py  message.py  order.py  shop.py
app/services/: ai_service.py  auth_service.py  customer_service.py  meta_oauth_service.py  notification_service.py  order_service.py  social_connection_service.py  whatsapp_service.py
app/tasks/: celery_app.py  order_tasks.py  token_tasks.py
app/utils/: order_parser.py  validators.py
scripts/: generate_encryption_key.py
